--- a/app/src/main/res/layout/content_add_participants.xml
+++ b/app/src/main/res/layout/content_add_participants.xml
@@ -32,14 +32,14 @@
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true" />
 
-    <TextView
-        android:id="@+id/textView1"
+    <ListView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/textView"
-        android:layout_alignRight="@+id/textView"
-        android:layout_below="@+id/textView"
-        android:gravity="center"
-        android:text="TextView" />
+        android:id="@+id/listViewContacts"
+        android:layout_below="@+id/editText"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="41dp" />
+
 
 </RelativeLayout>
