--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -4,45 +4,47 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.tcs.hangout.hangout.MainActivity"
     tools:showIn="@layout/activity_main">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="New Group"
-        android:id="@+id/textView"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:textColor="#0066CC"
-        android:singleLine="true"
-        android:onClick="onCreateNewGroup"/>
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="Delete Group"
-        android:id="@+id/textView2"
-        android:layout_alignBottom="@+id/textView"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:textColor="#0066CC" />
-
-    <View
+    <LinearLayout
+        android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="@android:color/darker_gray"
-        android:layout_marginTop="15dp"
-        android:layout_below="@+id/textView"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_height="match_parent"
+        android:weightSum="1">
 
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="GROUPS"
+            android:background="@drawable/button_state"
+            android:layout_weight="0.80"
+            android:id="@+id/buttonGroup"
+            android:shadowColor="#5C6BC0"
+            android:textColor="@android:color/background_light"
+            android:textColorHighlight="@android:color/background_dark" />
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="CONTACTS"
+            android:background="@drawable/button_state"
+            android:id="@+id/button2"
+            android:layout_weight="0.80"
+            android:shadowColor="#5C6BC0"
+            android:textColor="@android:color/background_light"
+            android:textColorHighlight="@android:color/background_dark"/>
+
+        <Button
+            android:layout_width="171dp"
+            android:layout_height="wrap_content"
+            android:text="PREVIOUS TRIPS"
+            android:background="@drawable/button_state"
+            android:shadowColor="#5C6BC0"
+            android:textColor="@android:color/background_light"
+            android:textColorHighlight="@android:color/background_dark"
+            android:id="@+id/button3" />
+    </LinearLayout>
 </RelativeLayout>
