--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -10,6 +10,7 @@
 
 
     <LinearLayout
+        android:id="@+id/ly"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="horizontal"
@@ -23,22 +24,24 @@
             android:background="@drawable/button_state"
             android:shadowColor="#5C6BC0"
             android:text="GROUPS"
+            android:onClick="showGroups"
             android:textColor="@android:color/background_light"
             android:textColorHighlight="@android:color/background_dark" />
 
         <Button
-            android:id="@+id/button2"
+            android:id="@+id/buttonContacts"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="0.80"
             android:background="@drawable/button_state"
             android:shadowColor="#5C6BC0"
             android:text="CONTACTS"
+            android:onClick="showContacts"
             android:textColor="@android:color/background_light"
             android:textColorHighlight="@android:color/background_dark" />
 
         <Button
-            android:id="@+id/button3"
+            android:id="@+id/buttonPrevious"
             android:layout_width="171dp"
             android:layout_height="wrap_content"
             android:background="@drawable/button_state"
@@ -53,4 +56,9 @@
         android:layout_width="match_parent"
         android:layout_marginTop="50dp"
         android:layout_height="wrap_content"></ListView>
+
+    <TextView android:id="@+id/textViewTest"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="50dp"/>
 </RelativeLayout>
