--- a/app/src/main/res/layout/content_create_new_group.xml
+++ b/app/src/main/res/layout/content_create_new_group.xml
@@ -7,6 +7,7 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
+    android:background="@drawable/background"
     android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.tcs.hangout.hangout.CreateNewGroupActivity"
@@ -70,7 +71,10 @@
         android:layout_below="@+id/groupName"
         android:layout_toRightOf="@+id/textView3"
         android:layout_toEndOf="@+id/textView3"
-        android:onClick="addGroupIcon"></Button>
+        android:onClick="addGroupIcon"
+        android:background="@drawable/button_selector"
+        android:textSize="@dimen/abc_action_bar_content_inset_material"
+        android:textColor="#ffffff"></Button>
 
     <View
         android:layout_width="match_parent"
