--- a/app/src/main/res/layout/selected_contacts_list_item.xml
+++ b/app/src/main/res/layout/selected_contacts_list_item.xml
@@ -7,7 +7,7 @@
     <!-- Single ListItem -->
 
     <!-- Contact Name -->
-    <TextView android:id="@+id/contact_name"
+    <TextView android:id="@+id/selected_contact_name"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:padding="10dip"
