--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -9,11 +9,10 @@
     tools:context="com.tcs.hangout.hangout.MainActivity"
     tools:showIn="@layout/activity_main">
 
-
     <LinearLayout
         android:id="@+id/ly"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:weightSum="1">
 
@@ -43,11 +42,24 @@
 
         <Button
             android:id="@+id/buttonPrevious"
-            android:layout_width="171dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_weight="0.80"
             android:background="@drawable/button_state"
             android:shadowColor="#5C6BC0"
-            android:text="PREVIOUS TRIPS"
+            android:text="TRIPS"
+            android:textColor="@android:color/background_light"
+            android:textColorHighlight="@android:color/background_dark" />
+
+        <Button
+            android:id="@+id/buttonTrip"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="0.80"
+            android:background="@drawable/button_state"
+            android:shadowColor="#5C6BC0"
+            android:text="PLACES"
+            android:onClick="onPlaces"
             android:textColor="@android:color/background_light"
             android:textColorHighlight="@android:color/background_dark" />
     </LinearLayout>
@@ -56,7 +68,7 @@
         android:id="@+id/listViewGroups"
         android:layout_width="match_parent"
         android:layout_marginTop="50dp"
-        android:layout_height="wrap_content"></ListView>
+        android:layout_height="wrap_content"/>
 
     <TextView android:id="@+id/textViewTest"
         android:layout_width="wrap_content"
