--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -9,24 +9,13 @@
     tools:context="com.tcs.hangout.hangout.MainActivity"
     tools:showIn="@layout/activity_main">
 
-    <LinearLayout
+   <!-- <LinearLayout
         android:id="@+id/ly"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:weightSum="1">
 
-        <Button
-            android:id="@+id/buttonGroup"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="0.80"
-            android:background="@drawable/button_state"
-            android:shadowColor="#5C6BC0"
-            android:text="GROUPS"
-            android:onClick="showGroups"
-            android:textColor="@android:color/background_light"
-            android:textColorHighlight="@android:color/background_dark" />
 
         <Button
             android:id="@+id/buttonContacts"
@@ -63,21 +52,14 @@
             android:textColor="@android:color/background_light"
             android:textColorHighlight="@android:color/background_dark" />
     </LinearLayout>
+-->
 
-    <ListView
-        android:id="@+id/listViewGroups"
-        android:layout_width="match_parent"
-        android:layout_marginTop="50dp"
-        android:layout_height="wrap_content"/>
+
 
     <TextView android:id="@+id/textViewTest"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="50dp"/>
 
-    <ListView
-        android:id="@+id/listContacts"
-        android:layout_width="match_parent"
-        android:layout_marginTop="50dp"
-        android:layout_height="wrap_content"></ListView>
+
 </RelativeLayout>
