Added Google Places Util

--- a/app/src/main/res/layout/content_create_new_places.xml
+++ b/app/src/main/res/layout/content_create_new_places.xml
@@ -15,20 +15,22 @@
     <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/editText2"
+        android:id="@+id/editTextDestination"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:hint="@string/select_location"/>
+        android:hint="@string/select_location"
+        android:layout_alignRight="@+id/button"
+        android:layout_alignEnd="@+id/button" />
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/ok"
+        android:text="Select Interests"
         android:id="@+id/button"
-        android:layout_alignParentTop="true"
+        android:onClick="onSelectLocation"
+        android:layout_below="@+id/editTextDestination"
         android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:onClick="onSelectLocation"/>
+        android:layout_alignParentEnd="true" />
 
 </RelativeLayout>
