--- a/app/src/main/res/menu/menu_group_details.xml
+++ b/app/src/main/res/menu/menu_group_details.xml
@@ -7,4 +7,10 @@
         android:icon="@drawable/ic_add_circle_outline_white_24dp"
         android:title="@string/action_next"
         app:showAsAction="always"/>
+
+    <item
+        android:id="@+id/action_add_member"
+        android:orderInCategory="100"
+        android:title="@string/action_add_member"
+        app:showAsAction="never" />
 </menu>
