--- a/app/src/main/res/layout/content_show_places.xml
+++ b/app/src/main/res/layout/content_show_places.xml
@@ -7,6 +7,7 @@
         android:layout_height="wrap_content"
         android:id="@+id/placesListView"
         android:layout_alignParentTop="true"
+        android:scrollbars="vertical"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true">
 
